# supermarket-inventory-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
gx/: great_expectations.yml
gx/checkpoints/: sales_checkpoint.yml
gx/expectations/: .ge_store_backend_id
gx/expectations/sales_2024_north_region/csv/: warning.json
notebooks/: EDA_north_region_sales.html
scripts/: simulate_north_region_sales.py
